Improved Facebook flow a bit.  Fixed some rendering issues.  Handle expired Facebook OAuth tokens.

--- a/content/facebook_progress.xhtml
+++ b/content/facebook_progress.xhtml
@@ -3,8 +3,10 @@
     xmlns:xul="http://www.mozilla.org/keymaster/gatekeeper/there.is.only.xul"
     version="-//W3C//DTD XHTML 1.1//EN" xml:lang="en">
 <head>
+<title>Processing Facebook Authorization</title>
 </head>
 <body>
-Processing Facebook authorization...
+<div style="font:14pt bold Helvetica;width:400px;margin-top:80px;margin:auto">Processing Facebook authorization...</div>
+
 </body>
 </html>
