Fixed problem with Minefield by removing __count__ usages; updated version code

--- a/content/upgrade.xhtml
+++ b/content/upgrade.xhtml
@@ -6,20 +6,20 @@
  <link rel="stylesheet"
       href="chrome://people/content/directory.css"
       type="text/css" />
-<title>Contacts: Updated to 0.3</title>
+<title>Contacts: Updated to 0.3.1</title>
 </head>
 
 <body>
 
 <div class='head'>
-Firefox Contacts: Upgraded to version 0.3
+Firefox Contacts: Upgraded to version 0.3.1
 </div>
 
 
 <div class='dir'>
 <img style="float:right" src="images/experiment.png"/>
 <p>
-Firefox Contacts has been updated to version 0.3.
+Firefox Contacts has been updated to version 0.3.1.
 </p>
 
 <p>
@@ -34,7 +34,7 @@ if you have any comments or feedback.
 
 <br clear="all"/>
 
-<p><b>Development Notes:</b></p>
+<p><b>Release Notes:</b></p>
 
 <p>
 <ul>
@@ -59,6 +59,8 @@ visible to web-crawler-type systems; for example, it can access a Gowalla locati
 and Firefox will do what it can to display information about that person.  Information from your local address book (if any) 
 will be combined with information that can be discovered from sources on the web.  You can use URLs from social networking 
 sites like Facebook, Twitter, Digg -- for example, try "<a href="person:http://www.facebook.com/zuck">person:http://www.facebook.com/zuck</a>"</li>
+
+<li><i>0.3.1: Fixed a problem with Firefox 3.7 alpha builds</i></li>
 
 </ul>
 </p>
