--- a/content/upgrade.xhtml
+++ b/content/upgrade.xhtml
@@ -61,6 +61,7 @@ will be combined with information that can be discovered from sources on the web
 sites like Facebook, Twitter, Digg -- for example, try "<a href="person:http://www.facebook.com/zuck">person:http://www.facebook.com/zuck</a>"</li>
 
 <li><i>0.3.1: Fixed a problem with Firefox 3.7 alpha builds</i></li>
+<li><i>0.3.2: Made AwesomeBar completion match on full strings only, e.g. "Mike", not "Mik"</i></li>
 
 </ul>
 </p>
