Fixed 0.3.2 release text

--- a/content/upgrade.xhtml
+++ b/content/upgrade.xhtml
@@ -41,8 +41,8 @@ if you have any comments or feedback.
 <li>Support for Yahoo! import.  You will need to log in and retrieve a security code from Yahoo! to enable the importer.</li>
 
 <li>Support for Facebook import and discovery.  When you connect to Facebook you will need to authorize Firefox Contacts to access your account.  
-This integration is using the brand-new Facebook Graph API, and may still have some hiccups.  You may need to Refresh your connection to Facebook
-on occasion to make it work properly.</li>
+This integration is using the brand-new Facebook Graph API, and may still have some hiccups.  You will need to disconnect and reconnect your
+Facebook connection now and then to make it work properly; we're working on making this better by maintaining a background session.</li>
 
 <li>Support for "person:" addresses, and auto-completion of people in the AwesomeBar.  Just start typing a contact's name in the location bar and it will automatically suggest completions.</li>
 
@@ -61,7 +61,7 @@ will be combined with information that can be discovered from sources on the web
 sites like Facebook, Twitter, Digg -- for example, try "<a href="person:http://www.facebook.com/zuck">person:http://www.facebook.com/zuck</a>"</li>
 
 <li><i>0.3.2: Fixed a problem with Firefox 3.7 alpha builds</i></li>
-<li><i>0.3.2: Made AwesomeBar completion match on full strings only, e.g. "Mike", not "Mik"</i></li>
+<li><i>0.3.2: Made AwesomeBar completion match on full strings only, e.g. "Mike", not "Mik"; clarified Facebook OAuth behavior; fixed bugs in "Disconnect" from Yahoo!</i></li>
 
 </ul>
 </p>
