New visual style.

--- a/content/manager.xhtml
+++ b/content/manager.xhtml
@@ -288,24 +288,18 @@ function selectPane(pane) {
 
 <div style="display:none" id="servicepane">
 
-<a target="_blank" href="http://mozillalabs.com/browser-contacts"><img style="position:absolute;left:850px;top:20px" src="images/experiment.png"/></a>
-<p style="color:#505050;font-weight:normal">
-This is a <b>Mozilla Labs Experiment</b>.  It is NOT production-quality code.  It
-may crash, generate incorrect output, or contain security bugs.  Please do not use it
-on Firefox profile you cannot afford to lose.  If you do not know what a Firefox Profile
-is, you may want to read about them <a href="http://support.mozilla.com/en-US/kb/Managing+profiles?bl=n&amp;s=profile&amp;as=q">here</a>;
-they are a good way to experiment with Firefox addons without putting your data at risk.
-</p>
-
-<p>
-<b>Firefox Contacts</b> reads your contact information from any website or program
-on your computer, and uses it to enhance your web browsing experience.
-</p>
-
-<p>
-Contacts will try to connect contacts that probably represent the same person by
-looking at email addresses and full names.
-</p>
+<div id="servicesHeader">
+	<a target="_blank" href="http://mozillalabs.com/contacts"><img class="contactsLogo" src="images/contactsLogo.png"/></a>
+	<p style="color:#505050;font-weight:normal">
+	This is a <b>Mozilla Labs Experiment</b>.  It is NOT production-quality code.  It
+	may crash, generate incorrect output, or contain security bugs.  Please do not use it
+	on Firefox profile you cannot afford to lose.  If you do not know what a Firefox Profile
+	is, you may want to read about them <a href="http://support.mozilla.com/en-US/kb/Managing+profiles?bl=n&amp;s=profile&amp;as=q">here</a>;
+	they are a good way to experiment with Firefox addons without putting your data at risk.
+	</p>
+	<p><b>Firefox Contacts</b> reads your contact information from any website or program on your computer, and uses it to enhance your web browsing experience.</p>
+	<p>Contacts will try to connect contacts that probably represent the same person by looking at email addresses and full names.</p>
+</div>
 
 <div class="controlsubhead">Contact Services</div>
 <p>
