--- a/content/disclosure.xhtml
+++ b/content/disclosure.xhtml
@@ -32,6 +32,7 @@
   </div>
 
 	<div id="rememberPicker">
+    By default, this information will only be shared until you restart your browser.<br/><br/>
 		<input type="checkbox" id="remember" onclick="toggleRemember()" /> <b>Remember these settings for this page</b><br/>
     <div id="rememberFinePrint">(You can revoke permission later from the "Contacts" item in the "Tools" menu)</div>
 	</div>
