--- a/content/person.xhtml
+++ b/content/person.xhtml
@@ -4,6 +4,11 @@
 <head>
 <link rel="stylesheet" href="chrome://people/content/person.css" type="text/css" />
 <script type="text/javascript;version=1.8" src="chrome://people/content/person.js"></script>
+<script type="text/javascript;version=1.8"
+    src="chrome://people/content/jquery.js"></script>
+<script type='text/javascript'
+    src='chrome://people/content/jquery.tipsy.js'></script>
+<link rel="stylesheet" href="chrome://people/content/tipsy.css" type="text/css" />
 </head>
 <body>
 <div id="content">
